# heartrate-camera-monitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  config.yaml  vcpkg.json
include/: Config.hpp  FaceProcessor.hpp  HeartbeatAnalyzer.hpp  Overlay.hpp
src/: Config.cpp  FaceProcessor.cpp  HeartbeatAnalyzer.cpp  HotKeyManager.cpp  Overlay.cpp  main.cpp
